// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`choice, renders custom styles: base 1`] = `
<View
  style={
    Object {
      "margin": 10,
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 16,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 1,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
  <Text
    accessibilityLabel="Test hint"
    style={
      Object {
        "color": "#5c6373",
        "fontFamily": "OpenSans",
        "fontSize": 15,
        "marginBottom": 5,
        "marginTop": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex hint"
  >
    Test hint
  </Text>
</View>
`;

exports[`choice, renders custom styles: disabled 1`] = `
<View
  style={
    Object {
      "margin": 12,
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.12)",
          "fontFamily": "OpenSans",
          "fontSize": 18,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomColor": "#cc3d5e",
        "borderBottomWidth": 2,
        "borderColor": "rgba(0, 0, 0, 0.12)",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.12)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "rgba(0, 0, 0, 0.12)",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
  <Text
    accessibilityLabel="Test hint"
    style={
      Object {
        "color": "rgba(0, 0, 0, 0.12)",
        "fontFamily": "OpenSans",
        "fontSize": 17,
        "marginBottom": 0,
        "marginTop": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex hint"
  >
    Test hint
  </Text>
  <Text
    accessibilityLabel="Error"
    style={
      Object {
        "color": "blue",
        "fontSize": 12,
        "marginVertical": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex error"
  >
    Error
  </Text>
</View>
`;

exports[`choice, renders custom styles: errored 1`] = `
<View
  style={
    Object {
      "margin": 11,
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 17,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomColor": "#cc3d5e",
        "borderBottomWidth": 2,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
  <Text
    accessibilityLabel="Test hint"
    style={
      Object {
        "color": "#5c6373",
        "fontFamily": "OpenSans",
        "fontSize": 16,
        "marginBottom": 0,
        "marginTop": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex hint"
  >
    Test hint
  </Text>
  <Text
    accessibilityLabel="Error"
    style={
      Object {
        "color": "red",
        "fontSize": 12,
        "marginVertical": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex error"
  >
    Error
  </Text>
</View>
`;

exports[`choice, renders default 1`] = `
<View
  style={
    Object {
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 12,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 1,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`choice, renders disabled 1`] = `
<View
  style={
    Object {
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "rgba(0, 0, 0, 0.12)",
          "fontFamily": "OpenSans",
          "fontSize": 12,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.12)",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 1,
        "borderColor": "rgba(0, 0, 0, 0.12)",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.12)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "rgba(0, 0, 0, 0.12)",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`choice, renders error 1`] = `
<View
  style={
    Object {
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 12,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomColor": "#cc3d5e",
        "borderBottomWidth": 2,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
  <Text
    accessibilityLabel="This field is required!"
    style={
      Object {
        "color": "#cc3d5e",
        "fontSize": 12,
        "marginVertical": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex error"
  >
    This field is required!
  </Text>
</View>
`;

exports[`choice, renders error with hint 1`] = `
<View
  style={
    Object {
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 12,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomColor": "#cc3d5e",
        "borderBottomWidth": 2,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
  <Text
    accessibilityLabel="Test hint"
    style={
      Object {
        "color": "#5c6373",
        "fontFamily": "OpenSans",
        "fontSize": 12,
        "marginBottom": 0,
        "marginTop": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex hint"
  >
    Test hint
  </Text>
  <Text
    accessibilityLabel="This field is required!"
    style={
      Object {
        "color": "#cc3d5e",
        "fontSize": 12,
        "marginVertical": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex error"
  >
    This field is required!
  </Text>
</View>
`;

exports[`choice, renders hint 1`] = `
<View
  style={
    Object {
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 12,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 1,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
  <Text
    accessibilityLabel="Test hint"
    style={
      Object {
        "color": "#5c6373",
        "fontFamily": "OpenSans",
        "fontSize": 12,
        "marginBottom": 5,
        "marginTop": 5,
        "paddingHorizontal": 16,
      }
    }
    testID="sex hint"
  >
    Test hint
  </Text>
</View>
`;

exports[`choice, renders not required 1`] = `
<View
  style={
    Object {
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 12,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 1,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
</View>
`;

exports[`choice, renders required 1`] = `
<View
  style={
    Object {
      "marginVertical": 12,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#5c6373",
          "fontFamily": "OpenSans",
          "fontSize": 12,
          "paddingHorizontal": 16,
        },
        undefined,
      ]
    }
  >
    SEX
    <Text
      style={
        Object {
          "color": "#cc3d5e",
          "fontFamily": "OpenSans",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#fff",
        "borderBottomWidth": 1,
        "borderColor": "#d6dae6",
        "borderTopWidth": 1,
        "flexDirection": "row",
        "flexWrap": "nowrap",
        "justifyContent": "space-between",
        "marginTop": 5,
        "maxHeight": 160,
        "minHeight": 48,
        "paddingEnd": 10,
        "paddingHorizontal": 16,
        "paddingStart": 16,
        "paddingVertical": 6,
      }
    }
    testID="picker-sex-dropdown"
  >
    <Text
      ellipsizeMode="tail"
      style={
        Object {
          "color": "rgba(0, 0, 0, 0.87)",
          "fontFamily": "OpenSans",
          "fontSize": 15,
        }
      }
    >
      Male
    </Text>
    <Text
      allowFontScaling={false}
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "fontFamily": "awardwallet",
            "textAlign": "center",
          },
          Object {
            "color": "#a6a9b3",
          },
          Object {
            "fontSize": 24,
            "lineHeight": 24,
          },
          Object {
            "marginLeft": 5,
          },
        ]
      }
    >
      
    </Text>
  </View>
  <Modal
    animationType="slide"
    hardwareAccelerated={false}
    testID="picker-sex-modal"
    transparent={true}
    visible={false}
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "flex-end",
        }
      }
    >
      <View
        style={
          Object {
            "flex": 1,
            "width": 750,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "flex": 1,
              "width": 750,
            }
          }
          testID="picker-sex-cancel"
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "backgroundColor": "#dfe1e6",
            "justifyContent": "center",
            "padding": 0,
            "width": 750,
          }
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#f3f4f5",
              "borderTopColor": "#dfe1e6",
              "borderTopWidth": 1,
              "flexDirection": "row",
              "flexWrap": "nowrap",
              "height": 40,
              "justifyContent": "flex-end",
              "width": 750,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "height": 40,
                "justifyContent": "center",
                "opacity": 1,
                "paddingHorizontal": 15,
              }
            }
            testID="picker-sex-done"
          >
            <Text
              style={
                Object {
                  "color": "#4684c4",
                  "fontFamily": "OpenSans-Bold",
                  "fontSize": 15,
                  "fontWeight": "bold",
                  "marginLeft": 20,
                }
              }
            >
              Done
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "width": 750,
            }
          }
        >
          <RNCPicker
            items={
              Array [
                Object {
                  "label": "Male",
                  "testID": "picker-item-Male",
                  "textColor": undefined,
                  "value": "m",
                },
                Object {
                  "label": "Female",
                  "testID": "picker-item-Female",
                  "textColor": undefined,
                  "value": "f",
                },
              ]
            }
            onChange={[Function]}
            selectedIndex={0}
            style={
              Array [
                Object {
                  "height": 216,
                },
                false,
              ]
            }
            testID="picker-sex"
          />
        </View>
      </View>
    </View>
  </Modal>
</View>
`;
